Add link to Assignment 3.

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -95,9 +95,17 @@
 		</td>
             </tr>
             <tr>
-                <td>Assignment #3 -</td>
-                <!-- <td><a href="assign3-w19.pdf">A Game of Twenty-One: More Conditionals and Loops</a></td> -->
-				</tr>
+                <td valign=top>Assignment #3 -</td>
+		<td><a href="assign3-W20-flight-animator.pdf">
+		    Flight Animator: Loops and Functions</a>;<br>
+		  Design due Feb. 2 at 11:59 p.m. 
+(<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7815091">Canvas</a>)<br>
+		  Peer Review due Feb. 5 at 11:59 p.m.
+(<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7815091">Canvas</a>)<br>
+		  Assignment due Feb. 9 at 11:59 p.m.
+		  (<a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a>)
+		</td>
+	    </tr>
             <tr>
                 <td>Assignment #4 -</td>
                  <!-- <td><a href="assign4-w19.pdf">Calculating Business Expenses and Reimbursement</a></td> -->
