Add content for Lectures 8 and 9.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -197,7 +197,12 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>01/24</td>
         <td>What do we do when things go wrong?<br>
 	  How can we use the same code in different places? (functions)<br>
-          <li>Lecture 8 slides</td>
+          <li><a href="lecture8-W20.pdf">Lecture 8 slides</a>
+	  <li>Code demo: <a href="demos/lec8-assert.cpp">lec8-assert.cpp</a>
+	  <li>Code demo: <a href="demos/lec8-bugs-before.cpp">lec8-bugs-before.cpp</a>
+	  <li>Code demo: <a href="demos/lec8-bugs-after.cpp">lec8-bugs-after.cpp</a>
+	  <li>Code demo: <a href="demos/lec8-functions.cpp">lec8-functions.cpp</a>
+	</td>
         <td>Rao Lesson 7 (pp. 151-158)<br>
 	<td><a href="../assignments/assign2-W20-adventure.pdf">
 	    Assignment #2</a> due Sunday, 01/26 by 11:59 p.m. 
@@ -209,7 +214,11 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       <tr>
         <td>01/27</td>
         <td>How do functions make programming easier?<br>
-        <li>Lecture 9 slides</td>
+        <li><a href="lecture9-W20.pdf">Lecture 9 slides</a>
+	<li>Practice: <a href="https://tinyurl.com/cs161-week4">Edabit Week 4</a>
+	<li>Code demo: <a href="demos/lec9-user-for.cpp">lec9-user-for.cpp</a>
+	<li>Code demo: <a href="demos/lec9-functions.cpp">lec9-functions.cpp</a>
+	</td>
         <td>Rao Lesson 7 (pp. 151-158)<br>
             <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL3.html">Miller Lecture 3</a> 
         </td>
@@ -239,7 +248,9 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>
 <!--	  <a href="test1_noans_f16.pdf"></a><br><a href="test1_ans_f16.pdf"></a>-->
         </td>
-        <td>Assignment #3 Design due Sunday, 02/02, by 11:59 p.m. (Canvas)</td>
+        <td><a href="../assignments/assign3-W20-flight-animator.pdf">
+Assignment #3 Design</a> due Sunday, 02/02, by 11:59 p.m. 
+(<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7815091">Canvas</a>)</td>
       </tr>
       <tr>
         <td class="weekBreak" colspan="4">Week #5 <hr></td>
@@ -263,7 +274,9 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>Rao Lesson 7 (pp. 166-167)<br>
           Rao Lesson 8 (pp. 205-208)<br>
 	</td>
-	<td>Assignment #3 Peer Review due Wednesday, 02/05 by 11:59 p.m. (Canvas)</td>
+	<td><a href="../assignments/assign3-W20-flight-animator.pdf">
+Assignment #3 Peer Review</a> due Wednesday, 02/05 by 11:59 p.m. 
+(<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7815091">Canvas</a>)</td>
       </tr>
       <tr>
         <td>02/07</td>
@@ -272,7 +285,9 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td>Rao Lesson 8 (pp. 177-186)<br>
         Rao Lesson 8 (pp. 187-204)<br>
 	</td>
-	<td>Assignment #3 due Sunday, 02/09 by 11:59 p.m. (TEACH)</td>
+	<td><a href="../assignments/assign3-W20-flight-animator.pdf">
+Assignment #3</a> due Sunday, 02/09 by 11:59 p.m. 
+	  (<a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a>)</td>
       </tr>
       <tr>
         <td class="weekBreak" colspan="4">Week #6 <hr></td>
