Add link to Lab 4.

--- a/labs/index.html
+++ b/labs/index.html
@@ -48,14 +48,13 @@
 		</td>
             </tr>
             <tr>
-                <td>Lab #2 - <a href="lab2-W20.pdf">Random Numbers and Conditionals</a>
-		</td>
+                <td>Lab #2 - <a href="lab2-W20.pdf">Random Numbers and Conditionals</a></td>
             </tr>
             <tr>
-                <td>Lab #3 - <a href="lab3-W20.pdf">Design and Loops</a>
+                <td>Lab #3 - <a href="lab3-W20.pdf">Design and Loops</a></td>
             </tr>
             <tr>
-                <td>Lab #4 - <!-- <a href="Lab4-Student-W19.pdf">Worksheet and Hands-on Design/Implementation Loops w/ Function</a> --></td>
+                <td>Lab #4 - <a href="lab4-W20.pdf">Functions and Debugging</a></td>
             </tr>
             <tr>
                 <td>Lab #5 - Practice Proficiency Demo
