--- a/calendar/index.html
+++ b/calendar/index.html
@@ -203,7 +203,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
 	  <li>Code demo: <a href="demos/lec8-bugs-after.cpp">lec8-bugs-after.cpp</a>
 	  <li>Code demo: <a href="demos/lec8-functions.cpp">lec8-functions.cpp</a>
 	</td>
-        <td>Rao Lesson 7 (pp. 151-158)<br>
+        <td>Rao Lesson 7 (pp. 151-158, 168-169)<br>
 	<td><a href="../assignments/assign2-W20-adventure.pdf">
 	    Assignment #2</a> due Sunday, 01/26 by 11:59 p.m. 
 	  (<a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a>)</td>
@@ -219,7 +219,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
 	<li>Code demo: <a href="demos/lec9-user-for.cpp">lec9-user-for.cpp</a>
 	<li>Code demo: <a href="demos/lec9-functions.cpp">lec9-functions.cpp</a>
 	</td>
-        <td>Rao Lesson 7 (pp. 151-158)<br>
+        <td>Rao Lesson 7 (pp. 151-158, 168-169)<br>
             <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL3.html">Miller Lecture 3</a> 
         </td>
         <td></td>
@@ -227,14 +227,20 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       <tr>
         <td>01/29</td>
         <td>Preparing for Midterm #1<br>
-        <li>Lecture 10 slides</td>
-        <td>
-<!--<a href="CS_161_Exam_I_Winter_2018_FORM_1v2.pdf">Past Exam for Class Review</a><p> 
-		<a href="cs161exam1_w17_1.pdf">Past Exam for Study Sessions</a></td>
-        <td><a href="CS_161_Exam_I_Winter_2018_FORM_1_ans.pdf">Past Exam Answers for Class Review</a><p> 
-		<a href="cs161exam1_w17_1_ans.pdf">Past Exam Answers for Study Sessions</a>
--->
-        </td>
+        <li><a href="lecture10-W20.pdf">Lecture 10 slides</a>
+	<li><a href="http://www.cplusplus.com/reference/string/string/getline/">String functions</a>
+	<li>Code demo: <a href="demos/lec10-string.cpp">lec10-string.cpp</a>
+	<li>Code demo: <a href="demos/lec10-string-line.cpp">lec10-string-line.cpp</a>
+	<li><a href="CS161_ExamI_F19_form1.pdf">
+	    Past Exam I</a> and
+	  <a href="CS161_ExamI_F19_form1_Keys.pdf">
+	    Answers to Past Exam I</a>
+	    <li><a href="CS 161 Exam I Winter 2019.pdf">
+		Past Exam II</a> and
+	      <a href="CS 161 Exam I Winter 2019_ans.pdf"> 
+	    Answers to Past Exam II</a>
+	</td>
+	<td></td>
         <td></td>
       </tr>
       <tr>
@@ -258,7 +264,7 @@ Assignment #3 Design</a> due Sunday, 02/02, by 11:59 p.m.
       <tr>
         <td>02/03</td>
         <td>What we learned from Midterm #1<br>
-          <li>Lecture 11 slides</td>
+          <li>Lecture 12 slides</td>
         <td>
 <!--
 <a href="CS 161 Exam I Winter 2019.pdf">Form 1 No answer</a><br>
@@ -270,20 +276,27 @@ Assignment #3 Design</a> due Sunday, 02/02, by 11:59 p.m.
       <tr>
         <td>02/05</td>
         <td>How can functions make permanent changes? (references)<br>
-        <li>Lecture 12 slides</td>
-        <td>Rao Lesson 7 (pp. 166-167)<br>
-          Rao Lesson 8 (pp. 205-208)<br>
+        <li>Lecture 13 slides</td>
+        <td>Rao Lesson 7 (pp. 163, 166-167)<br>
+          Rao Lesson 8 (pp. 205-210)<br>
 	</td>
 	<td><a href="../assignments/assign3-W20-flight-animator.pdf">
 Assignment #3 Peer Review</a> due Wednesday, 02/05 by 11:59 p.m. 
 (<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7815091">Canvas</a>)</td>
       </tr>
       <tr>
+        <td>02/06</td>
+        <td><b>Study session (week 5)
+	6-7 p.m. in LINC 268</b><br>
+	  <li><a href="WS5_W20.pdf">Worksheet 5</a> (print and complete, then bring to the study session)</td>
+	<td></td>
+	<td></td>
+      </tr>
+      <tr>
         <td>02/07</td>
         <td>Adapting when data storage isn't known in advance (dynamic memory allocation and pointers)<br>
-        <li>Lecture 13 slides</td>
+        <li>Lecture 14 slides</td>
         <td>Rao Lesson 8 (pp. 177-186)<br>
-        Rao Lesson 8 (pp. 187-204)<br>
 	</td>
 	<td><a href="../assignments/assign3-W20-flight-animator.pdf">
 Assignment #3</a> due Sunday, 02/09 by 11:59 p.m. 
@@ -295,9 +308,8 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
       <tr>
         <td>02/10</td>
         <td>More dynamic memory skills<br>
-	  <li>Lecture 14 slides</td>
-        <td>Rao Lesson 8 (pp. 177-186)<br>
-          Rao Lesson 8 (pp. 187-204)<br>
+	  <li>Lecture 15 slides</td>
+        <td>Rao Lesson 8 (pp. 187-204)<br>
 	</td>
         <td></td>
       </tr>
@@ -305,16 +317,21 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
         <td>02/12</td>
         <td>Structured data: 1-dimensional arrays and strings<br>
 	  How to read and write to files<br>
-          <li>Lecture 15 slides</td>
+          <li>Lecture 16 slides</td>
         <td>Rao Lesson 4 (pp. 63-70, 76-77)<br>
 	  <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL4.html">Miller Lecture 4</a>
         </td>
         <td></td>
       </tr>
       <tr>
+        <td>02/13</td>
+        <td colspan=3><b>Study session (week 6)
+	6-7 p.m. in LINC 268</b></td>
+      </tr>
+      <tr>
         <td>02/14</td>
         <td>Dynamic arrays and using arrays with functions<br>
-          <li>Lecture 16 slides</td>
+          <li>Lecture 17 slides</td>
         <td>Rao Lesson 4 (pp. 75-76)</td>
         <td>Assignment #4 Design due Sunday, 02/16, by 11:59 p.m. (Canvas)</td>
       </tr>
@@ -324,7 +341,7 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
       <tr>
         <td>02/17</td>
         <td>Multidimensional arrays<br>
-          <li>Lecture 17 slides</td>
+          <li>Lecture 18 slides</td>
 	<td>Rao Lesson 4 (pp. 71-74)<br>
 	  Rao Lesson 6 (pp. 145-146)</td>
         <td></td>
@@ -332,15 +349,20 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
       <tr>
         <td>02/19</td>
         <td>Create your own data types!<br>   <!-- structs and objects -->
-          <li>Lecture 18 slides</td>
+          <li>Lecture 19 slides</td>
 	<!-- classes, constructors, copy constructors -->
         <td>Rao Lesson 9 (pp. 215-233, 237-245)</td> 
 	<td>Assignment #4 Peer Review due Wednesday, 02/19 by 11:59 p.m. (Canvas)</td>
       </tr>
       <tr>
+        <td>02/20</td>
+        <td colspan=3><b>Study session (week 7)
+	6-7 p.m. in LINC 268</b></td>
+      </tr>
+      <tr>
         <td>02/21</td>
         <td>Destroy your own data types!<br>
-	  <li>Lecture 19 slides</td>
+	  <li>Lecture 20 slides</td>
 	<!-- destructors, this, sizeof, structs -->
         <td>Rao Lesson 9 (pp. 233-237, 246-258)</td>
 	<td>Assignment #4 due Sunday, 02/23 by 11:59 p.m. (TEACH)</td>
@@ -351,7 +373,7 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
       <tr>
         <td>02/24</td>
         <td>Divide and conquer: recursion<br>
-          <li>Lecture 20 slides</td>
+          <li>Lecture 21 slides</td>
         <td>Rao Lesson 7 (pp. 159-161)<br>
 	  <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL8.html">Miller Lecture 8</a>
         </td>
@@ -360,7 +382,7 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
       <tr>
         <td>02/26</td>
         <td>Preparing for Midterm #2<br>
-	  <li>Lecture 21 slides</td>
+	  <li>Lecture 22 slides</td>
 	<td></td>
         <td></td>
       </tr>
@@ -371,7 +393,7 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
       </tr>
       <tr>
         <td>02/28</td>
-        <td>Midterm #2</td>
+        <td>Midterm #2 <b>(different room: LINC 100)</b></td>
         <td></td>
         <td>Assignment #5 Design due Sunday, 03/01, by 11:59 p.m. (Canvas)</td>
       </tr>
@@ -381,7 +403,7 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
       <tr>
         <td>03/02</td>
         <td>What we learned from Midterm #2<br>
-	  <li>Lecture 22 slides</td>
+	  <li>Lecture 24 slides</td>
 	  <!--
         <td><a href="CS_161_Exam_II_Winter_2018_FORM_1_Key.pdf">Past Exam for Class Review</a><p> 
 		<a href="cs161_exam2.pdf">Past Exam for Study Sessions</a></td>
@@ -396,14 +418,19 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
       <tr>
         <td>03/04</td>
         <td>Recursion again and again and again<br>
-	  <li>Lecture 23 slides</td>
+	  <li>Lecture 25 slides</td>
 	<td><a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL8.html">Miller Lecture 8</a></t>
 	<td>Assignment #5 Peer Review due Wednesday, 03/04 by 11:59 p.m. (Canvas)</td>
       </tr>
       <tr>
+        <td>03/05</td>
+        <td colspan=3><b>Study session (week 9)
+	6-7 p.m. in LINC 268</b></td>
+      </tr>
+      <tr>
         <td>03/06</td>
         <td>Command-line arguments<br>
-	  <li>Lecture 24 slides</td>
+	  <li>Lecture 26 slides</td>
 	<td></td>
 	<td>Assignment #5 due Sunday, 03/08 by 11:59 p.m. (TEACH)</td>
       </tr>
@@ -413,16 +440,21 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
       <tr>
         <td>03/09</td>
         <td>C++ Progams in Space<br>
-	  <li>Lecture 25 slides</td>
+	  <li>Lecture 27 slides</td>
         <td></td>
         <td></td>
       </tr>
       <tr>
         <td>03/11</td>
         <td>More adventures with objects<br>
-	  <li>Lecture 26 slides</td>
+	  <li>Lecture 28 slides</td>
         <td></td>
         <td></td>
+      </tr>
+      <tr>
+        <td>03/12</td>
+        <td colspan=3><b>Study session (week 10)
+	6-7 p.m. in LINC 268</b></td>
       </tr>
       <tr>
         <td>03/13</td>
