--- a/clubs/index.html
+++ b/clubs/index.html
@@ -39,11 +39,13 @@
 	    <td><img height=200 alt="Hopper" src="images/hopper.jpg"></td>
 	  </tr>
 	  <tr>
-	    <td align=center><h3>330 points</h3></td>
-	    <td align=center><h3>350 points</h3></td>
-	    <td align=center><h3>300 points</h3></td>
-	    <td align=center><h3>290 points</h3></td>
+	    <td align=center><h3>440 points</h3></td>
+	    <td align=center><h3>490 points</h3></td>
+	    <td align=center><h3>430 points</h3></td>
+	    <td align=center><h3>550 points</h3></td>
 	  </tr>
+	  <tr><td style="text-align: center;" colspan=4>
+	      (After Jan. 29's lecture)</td></tr>
 	</table>
       </center>
 <hr>
