Add link to Lab 5.

--- a/labs/index.html
+++ b/labs/index.html
@@ -57,8 +57,7 @@
                 <td>Lab #4 - <a href="lab4-W20.pdf">Functions and Debugging</a></td>
             </tr>
             <tr>
-                <td>Lab #5 - Practice Proficiency Demo
-<!-- <a href="Lab5-Student-W19.pdf">Proficiency Demo Practice &amp Value-Returning and Passing Arguments to Functions </a> --></td>
+                <td>Lab #5 - <a href="lab5-W20.pdf">Practice Proficiency Demo and Passing Function Arguments by Reference</td>
             </tr>
             <tr>
                 <td>Lab #6 - <!-- <a href="Lab6-Student-W19.pdf">Worksheet on Pass by Reference to Functions &amp; Recursion/Hands-on Work on Assignment 4</a> --></td>
