Add link to Midterm 1 solution and update room for Midterm 2 review.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -264,7 +264,9 @@ Assignment #3 Design</a> due Sunday, 02/02, by 11:59 p.m.
       <tr>
         <td>02/03</td>
         <td>What we learned from Midterm #1<br>
-          <li>Lecture 12 slides</td>
+          <li>Lecture 12 slides
+	  <li><a href="CS161_Midterm_1_W20_form1_soln.pdf">Midterm #1 solution</a>
+	</td>
         <td>
 <!--
 <a href="CS 161 Exam I Winter 2019.pdf">Form 1 No answer</a><br>
@@ -316,9 +318,10 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
       <tr>
         <td>02/12</td>
         <td>Structured data: 1-dimensional arrays and strings<br>
+	  How to pass arrays to functions<br>
 	  How to read and write to files<br>
           <li>Lecture 16 slides</td>
-        <td>Rao Lesson 4 (pp. 63-70, 76-77)<br>
+        <td>Rao Lesson 4 (pp. 63-70, 76-77, 165-166)<br>
 	  <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL4.html">Miller Lecture 4</a>
         </td>
         <td></td>
@@ -389,7 +392,7 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
       <tr>
         <td>02/27</td>
         <td colspan=3><b>Midterm #2 Review, 
-	6-7 p.m. in KEC 1001</b></td>
+	6-7 p.m. in LINC 228</b></td>
       </tr>
       <tr>
         <td>02/28</td>
