Add links to code demos for lecture 12.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -264,8 +264,11 @@ Assignment #3 Design</a> due Sunday, 02/02, by 11:59 p.m.
       <tr>
         <td>02/03</td>
         <td>What we learned from Midterm #1<br>
-          <li>Lecture 12 slides
+          <li><a href="lecture12-W20.pdf">Lecture 12 slides</a>
 	  <li><a href="CS161_Midterm_1_W20_form1_soln.pdf">Midterm #1 solution</a>
+	  <li>Code demo: <a href="demos/lec12-flush.cpp">lec12-flush.cpp</a>
+	  <li>Code demo: <a href="demos/lec12-cr.cpp">lec12-cr.cpp</a>
+	  <li>Code demo: <a href="demos/lec12-backspace.cpp">lec12-backspace.cpp</a>
 	</td>
         <td>
 <!--
