Remove width restriction in text block.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
       <div>
 	<h3>Why take this class?</h3>
-	<div style="margin: auto; width: 800px; text-align: center;">
+	<div style="margin: auto; text-align: center;">
 	<P>Computers are everywhere in our lives and our careers.
 	Programming is a skill that allows you to express your desires
 	to control computers, enabling you to tap into their
