Minor wording change.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -280,7 +280,7 @@ Assignment #3 Design</a> due Sunday, 02/02, by 11:59 p.m.
       </tr>
       <tr>
         <td>02/05</td>
-        <td>How can functions make permanent changes? (references)<br>
+        <td>How can functions make persistent changes? (references)<br>
         <li>Lecture 13 slides</td>
         <td>Rao Lesson 7 (pp. 163, 166-167)<br>
           Rao Lesson 8 (pp. 205-210)<br>
