Update images for better mobile behavior.

--- a/clubs/index.html
+++ b/clubs/index.html
@@ -27,16 +27,16 @@
 	<h2>Class Houses</h2>
 	<table cellpadding=5>
 	  <tr>
-	    <td align=center><h3>Babbage</h3></td>
-	    <td align=center><h3>Lovelace</h3></td>
-	    <td align=center><h3>Turing</h3></td>
-	    <td align=center><h3>Hopper</h3></td>
+	    <td align=center width=25%><h3>Babbage</h3></td>
+	    <td align=center width=25%><h3>Lovelace</h3></td>
+	    <td align=center width=25%><h3>Turing</h3></td>
+	    <td align=center width=25%><h3>Hopper</h3></td>
 	  </tr>
 	  <tr>
-	    <td><img height=200 alt="Babbage" src="images/babbage.jpg"></td>
-	    <td><img height=200 alt="Lovelace" src="images/lovelace.jpg"></td>
-	    <td><img height=200 alt="Turing" src="images/turing.jpg"></td>
-	    <td><img height=200 alt="Hopper" src="images/hopper.jpg"></td>
+	    <td><img alt="Babbage" src="images/babbage.jpg"></td>
+	    <td><img alt="Lovelace" src="images/lovelace.jpg"></td>
+	    <td><img alt="Turing" src="images/turing.jpg"></td>
+	    <td><img alt="Hopper" src="images/hopper.jpg"></td>
 	  </tr>
 	  <tr>
 	    <td align=center><h3>470 points</h3></td>
