Add content for Lecture 13 and skip file I/O.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -281,7 +281,13 @@ Assignment #3 Design</a> due Sunday, 02/02, by 11:59 p.m.
       <tr>
         <td>02/05</td>
         <td>How can functions make persistent changes? (references)<br>
-        <li>Lecture 13 slides</td>
+        <li><a href="lecture13-W20.pdf">Lecture 13 slides</a>
+	<li>Code demo: <a href="demos/lec13-scope-practice-1.cpp">lec13-scope-practice-1.cpp</a>
+	<li>Code demo: <a href="demos/lec13-scope-practice-2.cpp">lec13-scope-practice-2.cpp</a>
+	<li>Code demo: <a href="demos/lec13-scope-practice-3.cpp">lec13-scope-practice-3.cpp</a>
+	<li>Code demo: <a href="demos/lec13-reference.cpp">lec13-reference.cpp</a>
+	<li>Code demo: <a href="demos/lec13-reference-strings.cpp">lec13-reference-strings.cpp</a>
+	</td>
         <td>Rao Lesson 7 (pp. 163, 166-167)<br>
           Rao Lesson 8 (pp. 205-210)<br>
 	</td>
@@ -322,10 +328,10 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
         <td>02/12</td>
         <td>Structured data: 1-dimensional arrays and strings<br>
 	  How to pass arrays to functions<br>
-	  How to read and write to files<br>
+<!--	  How to read and write to files<br>-->
           <li>Lecture 16 slides</td>
         <td>Rao Lesson 4 (pp. 63-70, 76-77, 165-166)<br>
-	  <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL4.html">Miller Lecture 4</a>
+<!--	  <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL4.html">Miller Lecture 4</a>-->
         </td>
         <td></td>
       </tr>
