Add Midterm dates to important dates.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                 <br> 01/12 - Last day to Add a class without dept. approval
                 <br> 01/12 - Last day to Drop a class for 100% refund
 		<br> 01/20 - Martin Luther King, Jr. Day (No School)
+		<br> 01/31 - Midterm #1, 2-2:50 p.m. in LINC 228
+		<br> 02/28 - Midterm #2, 2-2:50 p.m. in <font color="red">LINC 100</font>
 		<br> 03/16 - <font color="red">Final Exam, 6-7:50 p.m. in LINC 228</font>
             </p>
         </div>
