--- a/clubs/index.html
+++ b/clubs/index.html
@@ -39,13 +39,13 @@
 	    <td><img alt="Hopper" src="images/hopper.jpg"></td>
 	  </tr>
 	  <tr>
-	    <td align=center><h3>470 points</h3></td>
-	    <td align=center><h3>520 points</h3></td>
-	    <td align=center><h3>440 points</h3></td>
+	    <td align=center><h3>510 points</h3></td>
 	    <td align=center><h3>620 points</h3></td>
+	    <td align=center><h3>530 points</h3></td>
+	    <td align=center><h3>660 points</h3></td>
 	  </tr>
 	  <tr><td style="text-align: center;" colspan=4>
-	      (After Feb. 3's lecture)</td></tr>
+	      (After Feb. 5 lecture)</td></tr>
 	</table>
       </center>
 <hr>
