Use smaller ACMW logo file.

--- a/clubs/index.html
+++ b/clubs/index.html
@@ -111,7 +111,7 @@
             </div>
         </div>
         <div class="clubsBox">
-            <div class="imgBox"><img src="images/acmw.jpg" /></div>
+            <div class="imgBox"><img src="images/acmw_sml.png" /></div>
             <div class="text">
                 <h3>Association of Computing Machinery Women's Chapter:<br>Thursdays 5:30pm - 6:30 p.m., KEC 1005 (Weeks 2, 4, 6, 8, 10)</h3>
                 <p>The goal of ACM-W student chapters is to recruit and retain women students in undergraduate and graduate computing programs. The chapters provide a variety of activities to educate women about the opportunities in the field of computing, engage them in exciting computing activities, connect them with women leaders in the field, and encourage them to promote the field of computing to young girls.</p>
