Clarify demos 10 vs. 15 minutes.

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -35,8 +35,9 @@
 	    etc., as explained in the guidelines.</p>
 	  
           <p><b>Grading</b>: Assignments 1-4 will be <b>graded by
-	      demonstrating your work for 10 minutes with a
-	      TA</b>. You are required to
+	      demonstrating your work with a TA 
+	      (10 minutes for Assignments 1-3; 
+	      15 minutes for Assignment 4)</b>. You are required to 
 	    <b>sign up and meet with a TA within two weeks of the due date</b> to demo.</p>
 	  <ul>
 	    <li><b>Tip:</b>  Pick an early slot before they are all taken!  
