Add link and due dates for Assignment 4.

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -108,11 +108,19 @@
 		</td>
 	    </tr>
             <tr>
-                <td>Assignment #4 -</td>
-                 <!-- <td><a href="assign4-w19.pdf">Calculating Business Expenses and Reimbursement</a></td> -->
+                <td valign=top>Assignment #4 -</td>
+		<td><a href="assign4-W20-text.pdf">
+		    Text Surgeon: 1-D arrays, C-style strings, and dynamic memory allocation</a>;<br>
+		  Design due Feb. 16 at 11:59 p.m. 
+(<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7820844">Canvas</a>)<br>
+		  Peer Review due Feb. 19 at 11:59 p.m.
+(<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7820844">Canvas</a>)<br>
+		  Assignment due Feb. 23 at 11:59 p.m.
+		  (<a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a>)
+		</td>
             </tr>
             <tr>
-                <td>Assignment #5 -</td>
+                <td valign=top>Assignment #5 -</td>
                 <!-- <td><a href="assign5-w19.pdf">Finding Words and Producing Fractals</a></td> -->
             </tr>
 			
