Update content for week 6.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -299,15 +299,25 @@ Assignment #3 Peer Review</a> due Wednesday, 02/05 by 11:59 p.m.
         <td>02/06</td>
         <td><b>Study session (week 5)
 	6-7 p.m. in LINC 268</b><br>
-	  <li><a href="WS5_W20.pdf">Worksheet 5</a> (print and complete, then bring to the study session)</td>
+	  <li><a href="WS5_W20.pdf">Worksheet 5</a> (print and complete, then bring to the study session)<br>
+	  <li><a href="WS5_W20_soln.pdf">Worksheet 5 solution</a> 
+	</td>
 	<td></td>
 	<td></td>
       </tr>
       <tr>
         <td>02/07</td>
-        <td>Adapting when data storage isn't known in advance (dynamic memory allocation and pointers)<br>
-        <li>Lecture 14 slides</td>
+        <td>Working with pointers<br>
+        <li><a href="lecture14-W20.pdf">Lecture 14 slides</a>
+	<li>Code demo: <a href="demos/lec14-max-reference.cpp">lec14-max-reference.cpp</a>
+	<li>Code demo: <a href="demos/lec14-reference-strings.cpp">lec14-reference-strings.cpp</a>
+	<li>Code demo: <a href="demos/lec14-pass-pointer.cpp">lec14-pass-pointer.cpp</a>
+	<li>Code demo: <a href="demos/lec14-pointer-play.cpp">lec14-pointer-play.cpp</a>
+	</td>
         <td>Rao Lesson 8 (pp. 177-186)<br>
+	  <a href="https://www.geeksforgeeks.org/pointers-vs-references-cpp/">Pointers vs. references</a><br>
+	  <a href="https://www.tutorialspoint.com/cplusplus/cpp_references.htm">References in C++</a><br>
+
 	</td>
 	<td><a href="../assignments/assign3-W20-flight-animator.pdf">
 Assignment #3</a> due Sunday, 02/09 by 11:59 p.m. 
@@ -318,33 +328,50 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
       </tr>
       <tr>
         <td>02/10</td>
-        <td>More dynamic memory skills<br>
-	  <li>Lecture 15 slides</td>
+        <td>Adapting when data storage isn't known in advance (dynamic memory allocation)<br>
+	  <li><a href="lecture15-W20.pdf">Lecture 15 slides</a>
+	<li>Code demo: <a href="demos/lec15-pointer.cpp">lec15-pointer.cpp</a>
+	<li>Code demo: <a href="demos/lec15-mem-errors.cpp">lec15-mem-errors.cpp</a>
+	</td>
         <td>Rao Lesson 8 (pp. 187-204)<br>
+	  <a href="https://www.learncpp.com/cpp-tutorial/69-dynamic-memory-allocation-with-new-and-delete/">Memory allocation: new and delete</a><br>
+	  <a href="https://www.learncpp.com/cpp-tutorial/79-the-stack-and-the-heap/">The stack and the heap</a><br>
+	  <a href="https://www.geeksforgeeks.org/passing-reference-to-a-pointer-in-c/">Pass a reference to a pointer</a>
 	</td>
         <td></td>
       </tr>
       <tr>
         <td>02/12</td>
-        <td>Structured data: 1-dimensional arrays and strings<br>
-	  How to pass arrays to functions<br>
+        <td>Review of references, pointers, and dynamic memory management<br>
 <!--	  How to read and write to files<br>-->
-          <li>Lecture 16 slides</td>
-        <td>Rao Lesson 4 (pp. 63-70, 76-77, 165-166)<br>
-<!--	  <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL4.html">Miller Lecture 4</a>-->
+          <li><a href="lecture16-W20.pdf">Lecture 16 slides</a>
+	  <li>Code demo: <a href="demos/lec16-divide-string.cpp">lec16-divide-string.cpp</a>
+	  <li>Code demo: <a href="demos/lec16-stack-heap.cpp">lec16-stack-heap.cpp</a>
+	</td>
+        <td>Rao Lesson 8 (pp. 187-204)<br>
+	  <a href="https://www.learncpp.com/cpp-tutorial/69-dynamic-memory-allocation-with-new-and-delete/">Memory allocation: new and delete</a><br>
+	  <a href="https://www.learncpp.com/cpp-tutorial/79-the-stack-and-the-heap/">The stack and the heap</a><br>
         </td>
         <td></td>
       </tr>
       <tr>
         <td>02/13</td>
         <td colspan=3><b>Study session (week 6)
-	6-7 p.m. in LINC 268</b></td>
+	6-7 p.m. in LINC 268</b>
+	  <li><a href="WS6_W20.pdf">Worksheet 6</a> (print and complete, then bring to the study session)<br>
+	</td>
       </tr>
       <tr>
         <td>02/14</td>
-        <td>Dynamic arrays and using arrays with functions<br>
-          <li>Lecture 17 slides</td>
-        <td>Rao Lesson 4 (pp. 75-76)</td>
+        <td>Static arrays, C-style strings, and using arrays with functions<br>
+          <li>Lecture 17 slides
+	</td>
+        <td>
+	  Rao Lesson 4 (pp. 63-71, 74-79)<br>
+	  Rao Lesson 7 (pp. 165-166)<br>
+	  <a href="https://www.cprogramming.com/tutorial/lesson9.html">C-style strings</a><br>
+	  <a href="http://www.cplusplus.com/reference/cstring/">C-style string functions</a>
+	</td>
         <td>Assignment #4 Design due Sunday, 02/16, by 11:59 p.m. (Canvas)</td>
       </tr>
       <tr>
@@ -352,10 +379,12 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
       </tr>
       <tr>
         <td>02/17</td>
-        <td>Multidimensional arrays<br>
+        <td>Dynamic and multidimensional arrays<br>
           <li>Lecture 18 slides</td>
-	<td>Rao Lesson 4 (pp. 71-74)<br>
-	  Rao Lesson 6 (pp. 145-146)</td>
+	<td>Rao Lesson 8 (pp. 189-190)<br>
+	  Rao Lesson 4 (pp. 71-74)<br>
+	  Rao Lesson 6 (pp. 145-146)<br>
+	</td>
         <td></td>
       </tr>
       <tr>
