--- a/labs/index.html
+++ b/labs/index.html
@@ -57,10 +57,10 @@
                 <td>Lab #4 - <a href="lab4-W20.pdf">Functions and Debugging</a></td>
             </tr>
             <tr>
-                <td>Lab #5 - <a href="lab5-W20.pdf">Practice Proficiency Demo and Passing Function Arguments by Reference</td>
+                <td>Lab #5 - <a href="lab5-W20.pdf">Practice Proficiency Demo and Passing Function Arguments by Reference</a></td>
             </tr>
             <tr>
-                <td>Lab #6 - <!-- <a href="Lab6-Student-W19.pdf">Worksheet on Pass by Reference to Functions &amp; Recursion/Hands-on Work on Assignment 4</a> --></td>
+                <td>Lab #6 - <a href="lab6-W20.pdf">Pointers and Memory Allocation</a></td>
             </tr>
             <tr>
                 <td>Lab #7 - <!-- <a href="Lab7-Student-W19.pdf">Worksheet on Recursion and Reference/Pointers &amp; Hands-on Implement Recursion and References/Pointers</a> --></td>
