Add assignment 4 instructions and submission links.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -372,7 +372,8 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
 	  <a href="https://www.cprogramming.com/tutorial/lesson9.html">C-style strings</a><br>
 	  <a href="http://www.cplusplus.com/reference/cstring/">C-style string functions</a>
 	</td>
-        <td>Assignment #4 Design due Sunday, 02/16, by 11:59 p.m. (Canvas)</td>
+        <td><a href="../assignments/assign4-W20-text.pdf">
+Assignment #4 Design</a> due Sunday, 02/16, by 11:59 p.m. (<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7820844">Canvas</a>)</td>
       </tr>
       <tr>
         <td class="weekBreak" colspan="4">Week #7 <hr></td>
@@ -393,7 +394,9 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
           <li>Lecture 19 slides</td>
 	<!-- classes, constructors, copy constructors -->
         <td>Rao Lesson 9 (pp. 215-233, 237-245)</td> 
-	<td>Assignment #4 Peer Review due Wednesday, 02/19 by 11:59 p.m. (Canvas)</td>
+	<td><a href="../assignments/assign4-W20-text.pdf">
+Assignment #4 Peer Review</a> due Wednesday, 02/19 by 11:59 p.m. 
+(<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7820844">Canvas</a>)</td>
       </tr>
       <tr>
         <td>02/20</td>
@@ -406,7 +409,9 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
 	  <li>Lecture 20 slides</td>
 	<!-- destructors, this, sizeof, structs -->
         <td>Rao Lesson 9 (pp. 233-237, 246-258)</td>
-	<td>Assignment #4 due Sunday, 02/23 by 11:59 p.m. (TEACH)</td>
+	<td><a href="../assignments/assign4-W20-text.pdf">
+Assignment #4</a> due Sunday, 02/23 by 11:59 p.m. 
+	  (<a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a>)</td>
       </tr>
       <tr>
         <td class="weekBreak" colspan="4">Week #8 <hr></td>
