Add links to slides and code demos for lecture 17.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -359,16 +359,20 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
         <td colspan=3><b>Study session (week 6)
 	6-7 p.m. in LINC 268</b>
 	  <li><a href="WS6_W20.pdf">Worksheet 6</a> (print and complete, then bring to the study session)<br>
+	  <li><a href="WS6_W20_soln.pdf">Worksheet 6 solution</a> 
 	</td>
       </tr>
       <tr>
         <td>02/14</td>
-        <td>Static arrays, C-style strings, and using arrays with functions<br>
-          <li>Lecture 17 slides
+        <td>Static arrays and C-style strings<br>
+          <li><a href="lecture17-W20.pdf">Lecture 17 slides</a>
+	  <li>Code demo: <a href="demos/lec17-arrays.cpp">lec17-arrays.cpp</a>
+	  <li>Code demo: <a href="demos/lec17-play.cpp">lec17-play.cpp</a>
+	  <li>Code demo: <a href="demos/lec17-c-string.cpp">lec17-c-string.cpp</a>
 	</td>
         <td>
-	  Rao Lesson 4 (pp. 63-71, 74-79)<br>
-	  Rao Lesson 7 (pp. 165-166)<br>
+	  Rao Lesson 4 (pp. 63-71, 76-79)<br> <!-- arrays, C-style strings -->
+	  Rao Lesson 7 (pp. 165-166)<br> <!-- pass arrays to fns -->
 	  <a href="https://www.cprogramming.com/tutorial/lesson9.html">C-style strings</a><br>
 	  <a href="http://www.cplusplus.com/reference/cstring/">C-style string functions</a>
 	</td>
@@ -380,11 +384,13 @@ Assignment #4 Design</a> due Sunday, 02/16, by 11:59 p.m. (<a href="https://oreg
       </tr>
       <tr>
         <td>02/17</td>
-        <td>Dynamic and multidimensional arrays<br>
+        <td>Using arrays with functions; dynamic and multidimensional arrays<br> 
           <li>Lecture 18 slides</td>
-	<td>Rao Lesson 8 (pp. 189-190)<br>
-	  Rao Lesson 4 (pp. 71-74)<br>
-	  Rao Lesson 6 (pp. 145-146)<br>
+	<td>
+	  Rao Lesson 7 (pp. 165-166)<br> <!-- pass arrays to fns -->
+	  Rao Lesson 8 (pp. 189-190)<br> <!-- dynamic arrays -->
+	  Rao Lesson 4 (pp. 71-74)<br>   <!-- multidim arrays -->
+	  Rao Lesson 6 (pp. 145-146)<br> <!-- loops on multidim -->
 	</td>
         <td></td>
       </tr>
