--- a/labs/index.html
+++ b/labs/index.html
@@ -63,7 +63,7 @@
                 <td>Lab #6 - <a href="lab6-W20.pdf">Pointers and Memory Allocation</a></td>
             </tr>
             <tr>
-                <td>Lab #7 - <!-- <a href="Lab7-Student-W19.pdf">Worksheet on Recursion and Reference/Pointers &amp; Hands-on Implement Recursion and References/Pointers</a> --></td>
+                <td>Lab #7 - <a href="lab7-W20.pdf">1-D Arrays and C-Style Strings</a></td>
             </tr>
             <tr>
                 <td>Lab #8 - <!-- <a href="Lab8-Student-W19.pdf">Worksheet on Dynamic Memory and Strings &amp; Hands-on GDB and C-Style vs. C++ strings</a> --></td>
