--- a/calendar/index.html
+++ b/calendar/index.html
@@ -315,6 +315,7 @@ Assignment #3 Peer Review</a> due Wednesday, 02/05 by 11:59 p.m.
 	<li>Code demo: <a href="demos/lec14-pointer-play.cpp">lec14-pointer-play.cpp</a>
 	</td>
         <td>Rao Lesson 8 (pp. 177-186)<br>
+<!-- next time add 198-202 -->
 	  <a href="https://www.geeksforgeeks.org/pointers-vs-references-cpp/">Pointers vs. references</a><br>
 	  <a href="https://www.tutorialspoint.com/cplusplus/cpp_references.htm">References in C++</a><br>
 
@@ -384,22 +385,26 @@ Assignment #4 Design</a> due Sunday, 02/16, by 11:59 p.m. (<a href="https://oreg
       </tr>
       <tr>
         <td>02/17</td>
-        <td>Using arrays with functions; dynamic and multidimensional arrays<br> 
-          <li>Lecture 18 slides</td>
+        <td>Using arrays with functions; dynamic arrays<br> 
+          <li><a href="lecture18-W20.pdf">Lecture 18 slides</a><br>
+	  <li>Code demo: <a href="demos/lec18-static-array.cpp">lec18-static-array.cpp</a>
+	  <li>Code demo: <a href="demos/lec18-pass-array.cpp">lec18-pass-array.cpp</a>
+	  <li>Code demo: <a href="demos/lec18-arrays.cpp">lec18-arrays.cpp</a> (static vs. dynamic)
+	</td>
 	<td>
 	  Rao Lesson 7 (pp. 165-166)<br> <!-- pass arrays to fns -->
-	  Rao Lesson 8 (pp. 189-190)<br> <!-- dynamic arrays -->
-	  Rao Lesson 4 (pp. 71-74)<br>   <!-- multidim arrays -->
-	  Rao Lesson 6 (pp. 145-146)<br> <!-- loops on multidim -->
+	  Rao Lesson 8 (pp. 189-198)<br> <!-- dynamic arrays, ptrs to fns, arrays and ptrs -->
 	</td>
         <td></td>
       </tr>
       <tr>
         <td>02/19</td>
-        <td>Create your own data types!<br>   <!-- structs and objects -->
+        <td>Multidimensional arrays<br>  
           <li>Lecture 19 slides</td>
-	<!-- classes, constructors, copy constructors -->
-        <td>Rao Lesson 9 (pp. 215-233, 237-245)</td> 
+	<td>
+	  Rao Lesson 4 (pp. 71-74)<br>   <!-- multidim arrays -->
+	  Rao Lesson 6 (pp. 145-146)<br> <!-- loops on multidim -->
+	</td>
 	<td><a href="../assignments/assign4-W20-text.pdf">
 Assignment #4 Peer Review</a> due Wednesday, 02/19 by 11:59 p.m. 
 (<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7820844">Canvas</a>)</td>
@@ -407,14 +412,22 @@ Assignment #4 Peer Review</a> due Wednesday, 02/19 by 11:59 p.m.
       <tr>
         <td>02/20</td>
         <td colspan=3><b>Study session (week 7)
-	6-7 p.m. in LINC 268</b></td>
+	6-7 p.m. in LINC 268</b><br>
+	  <li><a href="WS7_W20.pdf">Worksheet 7</a> (print and complete, then bring to the study session)<br>
+</td>
       </tr>
       <tr>
         <td>02/21</td>
-        <td>Destroy your own data types!<br>
+        <td>Create your own data types!<br>   <!-- structs and objects -->
+        <!-- Destroy your own data types!<br> -->
 	  <li>Lecture 20 slides</td>
+	<td>
+	  <a href="http://www.cplusplus.com/doc/tutorial/structures/">Structs</a>
+	<!-- classes, constructors, copy constructors -->
+        <!-- Rao Lesson 9 (pp. 215-233, 237-245)<br> -->
 	<!-- destructors, this, sizeof, structs -->
-        <td>Rao Lesson 9 (pp. 233-237, 246-258)</td>
+        <!-- Rao Lesson 9 (pp. 233-237, 246-258)<br> -->
+	</td>
 	<td><a href="../assignments/assign4-W20-text.pdf">
 Assignment #4</a> due Sunday, 02/23 by 11:59 p.m. 
 	  (<a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a>)</td>
@@ -481,9 +494,9 @@ Assignment #4</a> due Sunday, 02/23 by 11:59 p.m.
       </tr>
       <tr>
         <td>03/06</td>
-        <td>Command-line arguments<br>
+        <td>Recursion again and again and again<br>
 	  <li>Lecture 26 slides</td>
-	<td></td>
+	<td><a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL8.html">Miller Lecture 8</a></t>
 	<td>Assignment #5 due Sunday, 03/08 by 11:59 p.m. (TEACH)</td>
       </tr>
       <tr>
@@ -491,14 +504,15 @@ Assignment #4</a> due Sunday, 02/23 by 11:59 p.m.
       </tr>
       <tr>
         <td>03/09</td>
-        <td>C++ Progams in Space<br>
+        <td>Command-line arguments<br>
+	  How to read and write to files<br>
 	  <li>Lecture 27 slides</td>
         <td></td>
         <td></td>
       </tr>
       <tr>
         <td>03/11</td>
-        <td>More adventures with objects<br>
+        <td>C++ Progams in Space<br>
 	  <li>Lecture 28 slides</td>
         <td></td>
         <td></td>
