Add link to gdb reference.

--- a/links/index.html
+++ b/links/index.html
@@ -75,6 +75,7 @@ call the National Suicide Prevention Lifeline at 1-800-273-TALK
 <a href="http://eecs.oregonstate.edu/it/">EECS SSH Login Info</a></li>
 <li> <a href="http://www.openvim.com/tutorial.html">Useful vim tutorial</a></li>
 <li>Windows users: <a href="http://cygwin.com/index.html">Install Cygwin utilities</a> (locally run Linux commands on Windows) </li>
+<li>Debugging: <a href="http://users.ece.utexas.edu/~adnan/gdb-refcard.pdf">gdb reference card</a>
 </ul>
 
 <h3>C/C++ Documentation</h3>
