Add lecture 19 links.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -400,7 +400,12 @@ Assignment #4 Design</a> due Sunday, 02/16, by 11:59 p.m. (<a href="https://oreg
       <tr>
         <td>02/19</td>
         <td>Multidimensional arrays<br>  
-          <li>Lecture 19 slides</td>
+          <li><a href="lecture19-W20.pdf">Lecture 19 slides</a><br>
+	  <li>Code demo: <a href="demos/lec19-max-in-array.cpp">lec19-max-in-array.cpp</a>
+	  <li>Code demo: <a href="demos/lec19-dynamic-arrays.cpp">lec19-dynamic-arrays.cpp</a>
+	  <li>Code demo: <a href="demos/lec19-2d-arrays.cpp">lec19-2d-arrays.cpp</a>
+	  <li>Code demo: <a href="demos/lec19-tictactoe.cpp">lec19-tictactoe.cpp</a>
+	</td>
 	<td>
 	  Rao Lesson 4 (pp. 71-74)<br>   <!-- multidim arrays -->
 	  Rao Lesson 6 (pp. 145-146)<br> <!-- loops on multidim -->
