Add lecture 20 links.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -425,7 +425,10 @@ Assignment #4 Peer Review</a> due Wednesday, 02/19 by 11:59 p.m.
         <td>02/21</td>
         <td>Create your own data types!<br>   <!-- structs and objects -->
         <!-- Destroy your own data types!<br> -->
-	  <li>Lecture 20 slides</td>
+	  <li><a href="lecture20-W20.pdf">Lecture 20 slides</a>
+	  <li>Code demo: <a href="demos/lec20-pass-2D-arrays.cpp">lec20-pass-2D-arrays.cpp</a>
+	  <li>Code demo: <a href="demos/lec20-structs.cpp">lec20-structs.cpp</a>
+	</td>
 	<td>
 	  <a href="http://www.cplusplus.com/doc/tutorial/structures/">Structs</a>
 	<!-- classes, constructors, copy constructors -->
