Add assignment 5 links.

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -121,7 +121,15 @@
             </tr>
             <tr>
                 <td valign=top>Assignment #5 -</td>
-                <!-- <td><a href="assign5-w19.pdf">Finding Words and Producing Fractals</a></td> -->
+		<td><a href="assign5-W20-treasure.pdf">
+		    Treasure Chest: 2-D arrays, structs, and dynamic memory allocation</a>;<br>
+		  Design due Mar. 1 at 11:59 p.m. 
+(<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7826749">Canvas</a>)<br>
+		  Peer Review due Mar. 4 at 11:59 p.m.
+(<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7826749">Canvas</a>)<br>
+		  Assignment due Mar. 8 at 11:59 p.m.
+		  (<a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a>)
+		</td>
             </tr>
 			
         </table>
