--- a/calendar/index.html
+++ b/calendar/index.html
@@ -378,7 +378,8 @@ Assignment #3</a> due Sunday, 02/09 by 11:59 p.m.
 	  <a href="http://www.cplusplus.com/reference/cstring/">C-style string functions</a>
 	</td>
         <td><a href="../assignments/assign4-W20-text.pdf">
-Assignment #4 Design</a> due Sunday, 02/16, by 11:59 p.m. (<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7820844">Canvas</a>)</td>
+Assignment #4 Design</a> due Sunday, 02/16, by 11:59 p.m. 
+(<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7820844">Canvas</a>)</td>
       </tr>
       <tr>
         <td class="weekBreak" colspan="4">Week #7 <hr></td>
@@ -419,6 +420,7 @@ Assignment #4 Peer Review</a> due Wednesday, 02/19 by 11:59 p.m.
         <td colspan=3><b>Study session (week 7)
 	6-7 p.m. in LINC 268</b><br>
 	  <li><a href="WS7_W20.pdf">Worksheet 7</a> (print and complete, then bring to the study session)<br>
+	  <li><a href="WS7_W20_soln.pdf">Worksheet 7 solution</a> 
 </td>
       </tr>
       <tr>
@@ -446,7 +448,11 @@ Assignment #4</a> due Sunday, 02/23 by 11:59 p.m.
       <tr>
         <td>02/24</td>
         <td>Divide and conquer: recursion<br>
-          <li>Lecture 21 slides</td>
+          <li><a href="lecture21-W20.pdf">Lecture 21 slides</a>
+	  <li>Code demo: <a href="demos/lec21-factorial-iterative.cpp">lec21-factorial-iterative.cpp</a>
+	  <li>Code demo: <a href="demos/lec21-factorial-recursive.cpp">lec21-factorial-recursive.cpp</a>
+	  <li>Code demo: <a href="demos/lec21-power-recursive.cpp">lec21-power-recursive.cpp</a>
+	</td>
         <td>Rao Lesson 7 (pp. 159-161)<br>
 	  <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL8.html">Miller Lecture 8</a>
         </td>
@@ -455,20 +461,26 @@ Assignment #4</a> due Sunday, 02/23 by 11:59 p.m.
       <tr>
         <td>02/26</td>
         <td>Preparing for Midterm #2<br>
-	  <li>Lecture 22 slides</td>
+	  <li><a href="lecture22-W20.pdf">Lecture 22 slides</a>
+	</td>
 	<td></td>
         <td></td>
       </tr>
       <tr>
         <td>02/27</td>
         <td colspan=3><b>Midterm #2 Review, 
-	6-7 p.m. in LINC 228</b></td>
+	6-7 p.m. in LINC 228</b>
+	  <li><a href="CS161_Midterm_2_W20_review.pdf">Example questions</a> and
+	  <a href="CS161_Midterm_2_W20_review_soln.pdf">Solutions</a>
+	</td>
       </tr>
       <tr>
         <td>02/28</td>
-        <td>Midterm #2 <b>(different room: LINC 100)</b></td>
+        <td>Midterm #2 <b><font color=red>(different room: LINC 100)</font></b></td>
         <td></td>
-        <td>Assignment #5 Design due Sunday, 03/01, by 11:59 p.m. (Canvas)</td>
+        <td><a href="../assignments/assign5-W20-treasure.pdf">
+Assignment #5 Design</a> due Sunday, 03/01, by 11:59 p.m. 
+(<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7826749">Canvas</a>)</td>
       </tr>
       <tr>
         <td class="weekBreak" colspan="4">Week #9 <hr></td>
@@ -493,7 +505,9 @@ Assignment #4</a> due Sunday, 02/23 by 11:59 p.m.
         <td>Recursion again and again and again<br>
 	  <li>Lecture 25 slides</td>
 	<td><a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL8.html">Miller Lecture 8</a></t>
-	<td>Assignment #5 Peer Review due Wednesday, 03/04 by 11:59 p.m. (Canvas)</td>
+	<td><a href="../assignments/assign5-W20-treasure.pdf">
+Assignment #5 Peer Review</a> due Wednesday, 03/04 by 11:59 p.m. 
+(<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7826749">Canvas</a>)</td>
       </tr>
       <tr>
         <td>03/05</td>
@@ -505,7 +519,9 @@ Assignment #4</a> due Sunday, 02/23 by 11:59 p.m.
         <td>Recursion again and again and again<br>
 	  <li>Lecture 26 slides</td>
 	<td><a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL8.html">Miller Lecture 8</a></t>
-	<td>Assignment #5 due Sunday, 03/08 by 11:59 p.m. (TEACH)</td>
+	<td><a href="../assignments/assign5-W20-treasure.pdf">
+Assignment #5</a> due Sunday, 03/08 by 11:59 p.m. 
+	  (<a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a>)</td>
       </tr>
       <tr>
         <td class="weekBreak" colspan="4">Week #10 <hr></td>
