--- a/labs/index.html
+++ b/labs/index.html
@@ -66,7 +66,7 @@
                 <td>Lab #7 - <a href="lab7-W20.pdf">1-D Arrays and C-Style Strings</a></td>
             </tr>
             <tr>
-                <td>Lab #8 - <!-- <a href="Lab8-Student-W19.pdf">Worksheet on Dynamic Memory and Strings &amp; Hands-on GDB and C-Style vs. C++ strings</a> --></td>
+                <td>Lab #8 - <a href="lab8-W20.pdf">Structs and Debugging with gdb</a></td>
             </tr>
             <tr>
                 <td>Lab #9 - <!-- <a href="Lab9-Student-W19.pdf">Towers of Hanoi: Two Dimensional Arrays with Recursion</a> --></td>
