Add link to week 9 study worksheet.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -512,7 +512,9 @@ Assignment #5 Peer Review</a> due Wednesday, 03/04 by 11:59 p.m.
       <tr>
         <td>03/05</td>
         <td colspan=3><b>Study session (week 9)
-	6-7 p.m. in LINC 268</b></td>
+	6-7 p.m. in LINC 268</b>
+	  <li><a href="WS9_W20.pdf">Worksheet 9</a> (print and complete, then bring to the study session)<br>
+	</td>
       </tr>
       <tr>
         <td>03/06</td>
