--- a/labs/index.html
+++ b/labs/index.html
@@ -69,7 +69,7 @@
                 <td>Lab #8 - <a href="lab8-W20.pdf">Structs and Debugging with gdb</a></td>
             </tr>
             <tr>
-                <td>Lab #9 - <!-- <a href="Lab9-Student-W19.pdf">Towers of Hanoi: Two Dimensional Arrays with Recursion</a> --></td>
+                <td>Lab #9 - <a href="lab9-W20.pdf">Adventures with Recursion</a></td>
             </tr>
             <tr>
                 <td>Lab #10 - Proficiency Demo: Show us what you've learned!
