Add example README.txt.

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -123,6 +123,7 @@
                 <td valign=top>Assignment #5 -</td>
 		<td><a href="assign5-W20-treasure.pdf">
 		    Treasure Chest: 2-D arrays, structs, and dynamic memory allocation</a>;<br>
+<a href="http://classes.engr.oregonstate.edu/eecs/winter2020/cs161-020/assignments/README_example.txt">Example README file</a> (for a hypothetical assignment)<br>
 		  Design due Mar. 1 at 11:59 p.m. 
 (<a href="https://oregonstate.instructure.com/courses/1771939/assignments/7826749">Canvas</a>)<br>
 		  Peer Review due Mar. 4 at 11:59 p.m.
