--- a/clubs/index.html
+++ b/clubs/index.html
@@ -39,13 +39,13 @@
 	    <td><img alt="Hopper" src="images/hopper.jpg"></td>
 	  </tr>
 	  <tr>
-	    <td align=center><h3>920 points</h3></td>
-	    <td align=center><h3>1250 points</h3></td>
-	    <td align=center><h3>1090 points</h3></td>
-	    <td align=center><h3>1360 points</h3></td>
+	    <td align=center><h3>950 points</h3></td>
+	    <td align=center><h3>1340 points</h3></td>
+	    <td align=center><h3>1130 points</h3></td>
+	    <td align=center><h3>1560 points</h3></td>
 	  </tr>
 	  <tr><td style="text-align: center;" colspan=4>
-	      (After Feb. 26 lecture)</td></tr>
+	      (After March 2 lecture)</td></tr>
 	</table>
       </center>
 <hr>
