Add midterm 2 form 2 solution, lecture 24 slides, updated final room.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -488,7 +488,10 @@ Assignment #5 Design</a> due Sunday, 03/01, by 11:59 p.m.
       <tr>
         <td>03/02</td>
         <td>What we learned from Midterm #2<br>
-	  <li>Lecture 24 slides</td>
+	  <li><a href="lecture24-W20.pdf">Lecture 24 slides</a>
+	  <li><a href="CS161_Midterm_2_W20_form1_soln.pdf">Midterm #2 solution, form 1</a>
+	  <li><a href="CS161_Midterm_2_W20_form2_soln.pdf">Midterm #2 solution, form 2</a>
+</td>
 	  <!--
         <td><a href="CS_161_Exam_II_Winter_2018_FORM_1_Key.pdf">Past Exam for Class Review</a><p> 
 		<a href="cs161_exam2.pdf">Past Exam for Study Sessions</a></td>
@@ -502,7 +505,7 @@ Assignment #5 Design</a> due Sunday, 03/01, by 11:59 p.m.
       </tr>
       <tr>
         <td>03/04</td>
-        <td>Recursion again and again and again<br>
+        <td>Recursion with structs<br>
 	  <li>Lecture 25 slides</td>
 	<td><a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL8.html">Miller Lecture 8</a></t>
 	<td><a href="../assignments/assign5-W20-treasure.pdf">
@@ -555,7 +558,7 @@ Assignment #5</a> due Sunday, 03/08 by 11:59 p.m.
         <td></td>
       </tr>
 <tr>
-  <td colspan=5 style="text-align: center;"><hr><h2>03/16 (Monday) Final Exam: 6:00 - 7:50 p.m. in LINC 228</h2></td>
+  <td colspan=5 style="text-align: center;"><hr><h2>03/16 (Monday) Final Exam: 6:00 - 7:50 p.m. in <font color="red">LINC 128</a></h2></td>
       </tr>
 </table>
 </center>
