--- a/assignments/index.html
+++ b/assignments/index.html
@@ -45,13 +45,13 @@
 	    which will help you do even better on the next assignment.</li>
 	    <li><b>Demo Outside 2 Weeks:</b> Assignments that are
           demonstrated later than the acceptable time period will be
-          receive a 50 point deduction.  (Also, we cannot guarantee a
+          receive a 50% deduction.  (Also, we cannot guarantee a
           late grading slot.)</li>
 	    <li><b>Demo Late Assignments:</b> Late assignments must still
 	  be demonstrated within the two-week demo period beginning
 	  from the assignment's original due date.</li>
 	    <li><b>Missing a Demo:</b> If you miss your scheduled demo
-	  with a TA, you will receive a 10 point (one letter grade)
+	  with a TA, you will receive a 10 point <!--(one letter grade)-->
 	  deduction to that assignment for each demo missed.</li>
 	    <li><b>No demo:</b> If you do not demonstrate your
 	  assignment, you will receive a 0.</li>
