--- a/calendar/index.html
+++ b/calendar/index.html
@@ -506,7 +506,10 @@ Assignment #5 Design</a> due Sunday, 03/01, by 11:59 p.m.
       <tr>
         <td>03/04</td>
         <td>Recursion with structs<br>
-	  <li>Lecture 25 slides</td>
+	  <li><a href="lecture25-W20.pdf">Lecture 25 slides</a>
+	  <li>Code demo: <a href="demos/lec25-pal-digits.cpp">lec25-pal-digits.cpp</a>
+	  <li>Code demo: <a href="demos/lec25-recur-structs.cpp">lec25-recur-structs.cpp</a>
+	</td>
 	<td><a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL8.html">Miller Lecture 8</a></t>
 	<td><a href="../assignments/assign5-W20-treasure.pdf">
 Assignment #5 Peer Review</a> due Wednesday, 03/04 by 11:59 p.m. 
