--- a/calendar/index.html
+++ b/calendar/index.html
@@ -505,7 +505,7 @@ Assignment #5 Design</a> due Sunday, 03/01, by 11:59 p.m.
       </tr>
       <tr>
         <td>03/04</td>
-        <td>Recursion with structs<br>
+        <td>Recursive data structures: linked lists<br>
 	  <li><a href="lecture25-W20.pdf">Lecture 25 slides</a>
 	  <li>Code demo: <a href="demos/lec25-pal-digits.cpp">lec25-pal-digits.cpp</a>
 	  <li>Code demo: <a href="demos/lec25-recur-structs.cpp">lec25-recur-structs.cpp</a>
@@ -524,8 +524,11 @@ Assignment #5 Peer Review</a> due Wednesday, 03/04 by 11:59 p.m.
       </tr>
       <tr>
         <td>03/06</td>
-        <td>Recursion again and again and again<br>
-	  <li>Lecture 26 slides</td>
+        <td>Recursive data structures: trees<br>
+	  <li><a href="lecture26-W20.pdf">Lecture 26 slides</a>
+	  <li>Code demo: <a href="demos/lec26-recur-train.cpp">lec26-recur-train.cpp</a>
+	  <li>Code demo: <a href="demos/lec26-recur-tree.cpp">lec26-recur-tree.cpp</a>
+	</td>
 	<td><a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL8.html">Miller Lecture 8</a></t>
 	<td><a href="../assignments/assign5-W20-treasure.pdf">
 Assignment #5</a> due Sunday, 03/08 by 11:59 p.m. 
@@ -556,7 +559,7 @@ Assignment #5</a> due Sunday, 03/08 by 11:59 p.m.
       </tr>
       <tr>
         <td>03/13</td>
-        <td>Closing Remarks, Preview of CS 162, Ask Me Anything</td>
+        <td>Review for the final exam, Preview of CS 162</td>
         <td></td>
         <td></td>
       </tr>
