--- a/assignments/index.html
+++ b/assignments/index.html
@@ -132,6 +132,15 @@
 		  (<a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a>)
 		</td>
             </tr>
+            <tr>
+                <td valign=top>Assignment #6 (optional) -</td>
+		<td><a href="assign6-W20-trains.pdf">
+		    Train Journey: 1-D arrays, structs, and recursion</a>;<br>
+<a href="http://classes.engr.oregonstate.edu/eecs/winter2020/cs161-020/assignments/README_example.txt">Example README file</a> (for a hypothetical assignment)<br>
+		  Assignment due Saturday, Mar. 14 at 11:59 p.m.
+		  (<a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a>)
+		</td>
+            </tr>
 			
         </table>
     </div>
