--- a/calendar/index.html
+++ b/calendar/index.html
@@ -561,7 +561,9 @@ Assignment #5</a> due Sunday, 03/08 by 11:59 p.m.
         <td>03/13</td>
         <td>Review for the final exam, Preview of CS 162</td>
         <td></td>
-        <td></td>
+	<td><a href="../assignments/assign6-W20-trains.pdf">
+Assignment #6</a> due Saturday, 03/14 by 11:59 p.m. 
+	  (<a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a>)</td>
       </tr>
 <tr>
   <td colspan=5 style="text-align: center;"><hr><h2>03/16 (Monday) Final Exam: 6:00 - 7:50 p.m. in <font color="red">LINC 128</a></h2></td>
